fixing map alignment on users page

--- a/src/_chaos/popup/pages/user/components/userInfo.styl
+++ b/src/_chaos/popup/pages/user/components/userInfo.styl
@@ -13,6 +13,10 @@
 			display inline-block
 			zoom .5
 
+	.map
+		clear both
+		margin-top 1em
+
 	#info
 		user-select initial
 
