--- a/src/base/client/ui/map/index.styl
+++ b/src/base/client/ui/map/index.styl
@@ -1,5 +1,4 @@
 :local(.map)
-	margin-top 1em
 	user-select none
 	display block
 
